<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/player_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/player_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/player_album_thumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_artist_track"
            />
        <ProgressBar
            android:id="@+id/player_buffering"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            android:visibility="invisible"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/player_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        />


    <SeekBar
        android:id="@+id/player_time_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/player_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            android:text="@string/default_player_current_time"
            />

        <TextView
            android:id="@+id/player_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/default_player_duration"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/player_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/description_previous_button"
            />

        <ImageButton
            android:id="@+id/player_skipback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_rew"
            android:contentDescription="@string/description_rewind_button"
            />

        <ImageButton
            android:id="@+id/player_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_pause"
            android:visibility="gone"
            android:contentDescription="@string/description_pause_button"
            />

        <ImageButton
            android:id="@+id/player_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/description_play_button"
            />

        <ImageButton
            android:id="@+id/player_skipforward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_ff"
            android:contentDescription="@string/description_forward_button"
            />

        <ImageButton
            android:id="@+id/player_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_next"
            android:contentDescription="@string/description_next_button"
            />

    </LinearLayout>

</LinearLayout>
